--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -99,7 +99,7 @@ La revista $\pi kasle$ contó con el apoyo y financiación de la <a href="https:
 <hr><div id="numeros">
 <h1>Zenbakiak</h1>
 <p style="text-align:justify;">
-De los 10 números digitales de $\pi kasle$, cuatro se publicarón en año cadémico 2011-12, tres en el año académico 2012-13 y tres en el año académico 2013-14. De los tres números impresos, dos se publicarón en el año académico 2012-13 y el restanto en el año académico 2013-14.
+$\pi kasle$ren 10 zenbaki digitaletako, 2011-12 ikasurtean lau argitaratu ziren, 2012-13 ikasurtean hiru  eta 2013-14 ikasurtean gainerako hiruak. Inprimatutako hiru zenbakietako, 2012-13 ikasurtean bi argitaratu ziren eta 2013-14 ikasurtean gainerakoa.
 </p>
 
 <div class="row" style="padding-top:2em;">
@@ -332,8 +332,8 @@ La mayoría de las artículos en esta sección son breves notas de prensa acerca
 </p>
 
 <ul style="list-style-type:none;">
- <li><a href="pikasle/PIkasle01.pdf#page=4">M. Macho-Stadler, <em>Amazings Bilbao 2011</em>, Revista $\pi kasle$ Aldizkaria <b>1</b> (2011), 4-5.</a></li>
- <li><a href="pikasle/PIkasle01.pdf#page=6">L. Fanelli, <em>Jóvenes matemáticos a orillas del río Duero</em>, Revista $\pi kasle$ Aldizkaria <b>1</b> (2011), 6.</a></li>
+ <li><a href="pikasle/PIkasle01.pdf#page=4">M. Macho-Stadler, <em>Amazings Bilbao 2011 (Gaztelaniaz) [Amazings Bilbao 2011]</em>, Revista $\pi kasle$ Aldizkaria <b>1</b> (2011), 4-5.</a></li>
+ <li><a href="pikasle/PIkasle01.pdf#page=6">L. Fanelli, <em>Jóvenes matemáticos a orillas del río Duero (Gaztelaniaz) [Duero ibaiaren ertzean gazte matematikoak]</em>, Revista $\pi kasle$ Aldizkaria <b>1</b> (2011), 6.</a></li>
  <li><a href="pikasle/PIkasle02.pdf#page=4">I. Llana, R. Grande, <em>Clausura de la exposición &ldquo;Con A de Astrónomas&rdquo;</em>, Revista $\pi kasle$ Aldizkaria <b>2</b> (2011), 4-5.</a></li>
  <li><a href="pikasle/PIkasle03.pdf#page=4">I. Llana, R. Grande, <em>Conferencia de Alfio Quarteroni</em>, Revista $\pi kasle$ Aldizkaria <b>3</b> (2012), 4.</a></li>
  <li><a href="pikasle/PIkasle03.pdf#page=5">I. Gurrutxaga, <em>El Centenario de la RSME y el reconocimiento de la ciencia matemática</em>, Revista $\pi kasle$ Aldizkaria <b>3</b> (2012), 5-6.</a></li>
@@ -777,7 +777,7 @@ Esta figura fue la contraportada del tercer número impreso de $\pi kasle$. Esta
 <br>
 <footer>
 <hr>
-  <p style="text-align:center;"><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> $\pi kasle$-eduki guztia <a style="color:white;" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu">Creative Commons Aitortu-EzKomertziala-PartekatuBerdin 3.0 Moldatu gabea lizentzia</a> baten mende dago.</p>
+  <p style="text-align:center;"><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> $\pi kasle$-eduki guztia <a style="color:white;" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu">Creative Commons Aitortu-EzKomertziala-PartekatuBerdin 3.0 Moldatu gabea lizentzia</a> baten mende dago.<br>Josué Tonelli Cueto-egatiko testua, ??-egatiko itzulpena</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
