--- a/pikasle_en.html
+++ b/pikasle_en.html
@@ -381,7 +381,7 @@ This section, the youngest in the magazine, contained reviews of books.
 </ul>
 
 
-<h3>3.- <em>Interview</em></h3>
+<h3>3.- <em>Interviews</em></h3>
 <p style="text-align:justify;">
 As the name indicates, this section featured interviews to people in the field of mathematics, both national and internationally.
 </p>
