--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -381,7 +381,7 @@ En esta sección, quien lo desea hace una reseña de un libro de su elección. E
 </ul>
 
 
-<h3>3.- <em>Entrevista</em></h3>
+<h3>3.- <em>Entrevistas</em></h3>
 <p style="text-align:justify;">
 Como indica el nombre, en esta sección, se realizaban entrevistas a diversas personas del mundo matemático tanto español como internacional.
 </p>
