--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -326,7 +326,7 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 Los artículos de la revista $\pi kasle$ se dividían en ocho secciones. A continuación, se describe cada una de las secciones indicando sus responsable habituales y se da una lista de citas de los artículos publicados en cada una de ellas.
 </p>
 
-<h3>0.- <em>Comunidad y Noticias</em></h3>
+<h3>0.- <em>Komunitatea eta berriak</em></h3>
 <p style="text-align:justify;">
 La mayoría de las artículos en esta sección son breves notas de prensa acerca de curiosidades, eventos y sucesos de matemáticos que no son firmadas. Sin embargo, esta sección contiene también artículos más desarrollados y firmados sobre diversos temas, que van desde experiencias personales en un evento hasta columnas de opinión.
 </p>
@@ -354,7 +354,7 @@ La mayoría de las artículos en esta sección son breves notas de prensa acerca
  <li><a href="pikasle/PIkasle10.pdf#page=6">I. Llana, <em>The Imitation Game</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 6.</a></li>
 </ul>
 
-<h3>1.- <em>Al acabar la carrera, ¿qué?</em></h3>
+<h3>1.- <em>Ikasketak amaitzean, zer?</em></h3>
 
 <p style="text-align:justify;">
 En esta sección, a cargo de Víctor Manero, se describen diversas opciones para las y los graduados en matemáticas tal como el título indica.
@@ -371,7 +371,7 @@ En esta sección, a cargo de Víctor Manero, se describen diversas opciones para
  <li><a href="pikasle/PIkasle10.pdf#page=6">S. Carreño, V. Manero, <em>Al acabar la carrera, ¿qué? &ndash; Entrevista a Sheila Carreño</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 6-7.</a></li>
 </ul>
 
-<h3>2.- <em>Reseñas</em></h3>
+<h3>2.- <em>Berri laburrak</em></h3>
 <p style="text-align:justify;">
 En esta sección, quien lo desea hace una reseña de un libro de su elección. Esta es la sección más joven de la revista.
 </p>
@@ -384,7 +384,7 @@ En esta sección, quien lo desea hace una reseña de un libro de su elección. E
 </ul>
 
 
-<h3>3.- <em>Entrevista</em></h3>
+<h3>3.- <em>Elkarrizketak</em></h3>
 <p style="text-align:justify;">
 Como indica el nombre, en esta sección, se realizaban entrevistas a diversas personas del mundo matemático tanto español como internacional.
 </p>
@@ -402,7 +402,7 @@ Como indica el nombre, en esta sección, se realizaban entrevistas a diversas pe
  <li><a href="pikasle/PIkasle10.pdf#page=9">J. Tonelli-Cueto, R. Grande, <em>Interview with Ronald de Vore</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 9-13.</a> En inglés.</li>
 </ul>
 
-<h3>4.- <em>Matemáticas</em> y mutaciones de la sección</h3>
+<h3>4.- <em>Matematikak</em> eta atal honetako mutazioak</h3>
 
 <p style="text-align:justify;">
 En esta sección y sus variantes, se tratan o bien las matemáticas o bien su relación con otras disciplinas como pueden ser otras ciencias, el arte, etc.
@@ -425,7 +425,7 @@ En esta sección y sus variantes, se tratan o bien las matemáticas o bien su re
  <li><a href="pikasle/PIkasle10.pdf#page=19">M. Santos, <em>Henri Poincaré: Matemático y filósofo</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 19-20.</a></li>
 </ul>
 
-<h3>5.- <em>Un paseo por la historia</em></h3>
+<h3>5.- <em>Historian zehar ibilaldi bat</em></h3>
 <p style="text-align:justify;">
 Esta sección, a cargo principalmente de Irune Gurrutxaga y Aitziber Ibañez, se tratan diversos temas de la historia de las matemáticas. Esta es la única sección con un artículo en cada número.
 </p>
@@ -443,7 +443,7 @@ Esta sección, a cargo principalmente de Irune Gurrutxaga y Aitziber Ibañez, se
  <li><a href="pikasle/PIkasle10.pdf#page=17">A. Ibañez, <em>El Café Escocés</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 17-18.</a></li>
 </ul>
 
-<h3>6.- <em>El concurso de Txomin</em></h3>
+<h3>6.- <em>Txominen Sariketa</em></h3>
 
 <p style="text-align:justify;">
 El consurso de Txomin era un concurso de problemas organizado por el matemático Txomin Zukalaregi. En este concurso, se proponía un problema, que se colgaba en cada aula de la facultad, y se daban diversos premios a quienes resolvían el problema. En esta sección, la revista $\pi kasle$ publicaba los últimos problemas y soluciones para darles más difusión entre el alumnado.
